--- a/libs/platform_layer/libs/opengl/Cargo.toml
+++ b/libs/platform_layer/libs/opengl/Cargo.toml
@@ -11,7 +11,7 @@ path = "./src/opengl.rs"
 
 [dependencies]
 platform_types = { path = "../../../platform_types" }
-gl = { path = "gl" }
+gl_layer = { path = "gl_layer" }
 glyph_brush = { version = "0.4.1" }
 glyph_brush_layout = { version = "0.1.5" }
 log = "0.4.4"
