--- a/libs/editor/libs/unicode-segmentation/Cargo.toml
+++ b/libs/editor/libs/unicode-segmentation/Cargo.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 authors = ["kwantam <kwantam@gmail.com>", "Ryan1729 <Ryan1729@gmail.com>"]
 edition = "2018"
 
+[lib]
+path = "./src/unicode_segmentation.rs"
+
 [dependencies]
+
+[dependencies.perf_viz]
+path = "../../../perf_viz"
