--- a/libs/perf_viz/Cargo.toml
+++ b/libs/perf_viz/Cargo.toml
@@ -8,9 +8,13 @@ edition = "2018"
 path = "./src/perf_viz.rs"
 
 [dependencies]
-flame = { version = "0.2.2", optional = true }
+# This version (the latest released as of this writing) doesn't expose
+# `dump_html_custom`, a function we need for flame graphs.
+#flame = { version = "0.2.2", optional = true }
+flame = { git = "https://github.com/TyOverby/flame.git", branch = "master", optional = true }
 perf_viz_proc_macro = { path = "libs/perf_viz_proc_macro" }
 
 [features]
 default = []
 flame-chart = ["flame", "perf_viz_proc_macro/flame-chart"]
+flame-graph = ["flame", "perf_viz_proc_macro/flame-graph"]
