--- a/libs/perf_viz/libs/perf_viz_proc_macro/Cargo.toml
+++ b/libs/perf_viz/libs/perf_viz_proc_macro/Cargo.toml
@@ -15,3 +15,4 @@ flamer = { path = "../flamer", optional = true }
 [features]
 default = []
 flame-chart = ["flame", "flamer"]
+flame-graph = ["flame", "flamer"]
