get all the tests passing again!

--- a/libs/editor/libs/panic_safe_rope/Cargo.toml
+++ b/libs/editor/libs/panic_safe_rope/Cargo.toml
@@ -19,6 +19,9 @@ path = "../../../platform_types"
 [dependencies.macros]
 path = "../../../macros"
 
+[dev-dependencies]
+proptest = "0.9.3"
+
 [features]
 default = []
 invariant-checking = ["check_or_no_panic/invariant-checking"]
