--- a/libs/platform_layer/libs/opengl/Cargo.toml
+++ b/libs/platform_layer/libs/opengl/Cargo.toml
@@ -10,6 +10,7 @@ license = "Apache-2.0"
 path = "./src/opengl.rs"
 
 [dependencies]
+platform_types = { path = "../../../platform_types" }
 gl = { path = "gl" }
 glyph_brush = { version = "0.4.1" }
 glyph_brush_layout = { version = "0.1.5" }
