--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "rote"
-version = "0.2.3"
+version = "0.2.4"
 authors = ["Ryan1729 <Ryan1729@gmail.com>"]
 license = "MIT and Apache 2.0"
 edition = "2018"
 
 [dependencies]
+lazy_static = "1.3.0"
 
 [dependencies.editor]
 path = "./libs/editor"
