--- a/libs/editor/Cargo.toml
+++ b/libs/editor/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 path = "./src/editor.rs"
 
 [dependencies]
+vec1 = "1.3.0"
 
 [dependencies.platform_types]
 path = "../platform_types"
