--- a/libs/editor/Cargo.toml
+++ b/libs/editor/Cargo.toml
@@ -14,6 +14,9 @@ unicode-segmentation = "1.2.1"
 [dependencies.platform_types]
 path = "../platform_types"
 
+[dependencies.macros]
+path = "../macros"
+
 [dependencies.editor_types]
 path = "libs/editor_types"
 
