mostly but not quite working mouse cursor movement

--- a/libs/editor/libs/editor_types/Cargo.toml
+++ b/libs/editor/libs/editor_types/Cargo.toml
@@ -11,3 +11,6 @@ path = "./src/editor_types.rs"
 
 [dependencies.macros]
 path = "../../../macros"
+
+[dependencies.platform_types]
+path = "../../../platform_types"
