--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "rote"
-version = "0.2.13"
+version = "0.2.14"
 authors = ["Ryan1729 <Ryan1729@gmail.com>"]
 license = "MIT and Apache 2.0"
 edition = "2018"
 
 [dependencies]
 lazy_static = "1.3.0"
+flame = { version = "0.2.2", optional = true }
+flamer = { version = "0.3", optional = true }
 
 [dependencies.editor]
 path = "./libs/editor"
@@ -27,6 +29,7 @@ rand = "0.3"
 [features]
 default = []
 invariant-checking = []
+flame-graph = ["flame", "flamer"]
 
 [workspace]
 
