get a disappointingly labeled chart and decide to use the proc macro after all

--- a/libs/editor/Cargo.toml
+++ b/libs/editor/Cargo.toml
@@ -11,6 +11,9 @@ path = "./src/editor.rs"
 vec1 = "1.4.0"
 unicode-segmentation = "1.2.1"
 
+[dependencies.perf_viz]
+path = "../perf_viz"
+
 [dependencies.platform_types]
 path = "../platform_types"
 
