--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,24 @@
 [package]
 name = "rote"
-version = "0.2.14"
+version = "0.2.13"
 authors = ["Ryan1729 <Ryan1729@gmail.com>"]
 license = "MIT and Apache 2.0"
 edition = "2018"
 
 [dependencies]
 lazy_static = "1.3.0"
-flame = { version = "0.2.2", optional = true }
-flamer = { version = "0.3", optional = true }
 
 [dependencies.editor]
 path = "./libs/editor"
 
-[dependencies.platform_types]
-path = "./libs/platform_types"
-
 [dependencies.macros]
 path = "./libs/macros"
+
+[dependencies.perf_viz]
+path = "./libs/perf_viz"
+
+[dependencies.platform_types]
+path = "./libs/platform_types"
 
 [dependencies.platform_layer]
 path = "./libs/platform_layer"
@@ -29,13 +30,14 @@ rand = "0.3"
 [features]
 default = []
 invariant-checking = []
-flame-graph = ["flame", "flamer"]
+flame-chart = ["perf_viz/flame-chart"]
 
 [workspace]
 
 members = [
     "libs/editor",
     "libs/macros",
+    "libs/perf_viz",
     "libs/platform_types",
     "libs/platform_layer",
 ]
