move tests and start outline of new tests

--- a/libs/editor/libs/gap_buffer/Cargo.toml
+++ b/libs/editor/libs/gap_buffer/Cargo.toml
@@ -24,3 +24,6 @@ path = "../editor_types"
 
 [dependencies.unicode_segmentation]
 path = "../unicode-segmentation"
+
+[dev-dependencies]
+proptest = "0.9.2"
