--- a/libs/editor/libs/search_tree/Cargo.toml
+++ b/libs/editor/libs/search_tree/Cargo.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 authors = ["Ryan1729 <Ryan1729@gmail.com>"]
 edition = "2018"
 
+[lib]
+path = "./src/search_tree.rs"
+
 [dependencies]
+
+[dev-dependencies]
+proptest = "0.9.2"
