decide that since sorting is easier thatn putting thing in tree order, we'll binary search from a sorted array instead

--- a/libs/editor/libs/gap_buffer/Cargo.toml
+++ b/libs/editor/libs/gap_buffer/Cargo.toml
@@ -22,8 +22,8 @@ path = "../../../platform_types"
 [dependencies.editor_types]
 path = "../editor_types"
 
-[dependencies.search_tree]
-path = "../search_tree"
+[dependencies.sorted]
+path = "../sorted"
 
 [dependencies.unicode_segmentation]
 path = "../unicode-segmentation"
