create/solidify abstraction layer between editor and buffer to make changing buffer implementation easier
I'm actually not sure it was worth making a trait. Pulling the buffer type out into a crate may have been better and would have forced the same kind of noting what methods are needed etc.

But pullingit into a named trait seems like what I should do for some reason? It feels like it's what I'm expected to do and also like it the "clever" thing to do. On the other hand, what does it actually do for me if I never use the `MultiCursorTextBuffer` type anywhere? The only thing I might do is eventually make `editor::State` generic over the biffer for testing, but I'm not sure what kind of test I would want to write that couldn't just use the real `TextBuffer` type.

--- a/libs/editor/libs/editor_types/Cargo.toml
+++ b/libs/editor/libs/editor_types/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 path = "./src/editor_types.rs"
 
 [dependencies]
+vec1 = "1.4.0"
 
 [dependencies.macros]
 path = "../../../macros"
