--- a/libs/editor/libs/panic_safe_rope/Cargo.toml
+++ b/libs/editor/libs/panic_safe_rope/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Ryan1729 <Ryan1729@gmail.com>"]
 edition = "2018"
 
+[lib]
+path = "./src/panic_safe_rope.rs"
+
 [dependencies]
 ropey = "1.0.1"
 
