discover a panic and decide to start working on eliminating those where practical

--- a/libs/editor/libs/panic_safe_rope/Cargo.toml
+++ b/libs/editor/libs/panic_safe_rope/Cargo.toml
@@ -9,6 +9,7 @@ path = "./src/panic_safe_rope.rs"
 
 [dependencies]
 ropey = "1.0.1"
+no-panic = "0.1"
 
 [dependencies.macros]
 path = "../../../macros"
