--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2018"
 [dependencies]
 lazy_static = "1.3.0"
 
+[dependencies.check_or_no_panic]
+path = "./libs/check_or_no_panic"
+
 [dependencies.editor]
 path = "./libs/editor"
 
@@ -29,7 +32,7 @@ rand = "0.3"
 
 [features]
 default = []
-invariant-checking = []
+invariant-checking = ["editor/invariant-checking"]
 time-render = ["platform_layer/time-render"]
 flame-chart = ["perf_viz/flame-chart"]
 flame-graph = ["perf_viz/flame-graph"]
