--- a/libs/editor/libs/panic_safe_rope/Cargo.toml
+++ b/libs/editor/libs/panic_safe_rope/Cargo.toml
@@ -9,7 +9,13 @@ path = "./src/panic_safe_rope.rs"
 
 [dependencies]
 ropey = "1.0.1"
-no-panic = "0.1"
+
+[dependencies.check_or_no_panic]
+path = "../../../check_or_no_panic"
 
 [dependencies.macros]
 path = "../../../macros"
+
+[features]
+default = []
+invariant-checking = ["check_or_no_panic/invariant-checking"]
