--- a/libs/editor/libs/text_buffer/Cargo.toml
+++ b/libs/editor/libs/text_buffer/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 path = "./src/text_buffer.rs"
 
 [dependencies]
+regex = "1.1.9"
+lazy_static = "1.3.0"
 
 [dependencies.editor_types]
 path = "../editor_types"
