--- a/libs/editor/libs/panic_safe_rope/Cargo.toml
+++ b/libs/editor/libs/panic_safe_rope/Cargo.toml
@@ -13,6 +13,9 @@ ropey = "1.0.1"
 [dependencies.check_or_no_panic]
 path = "../../../check_or_no_panic"
 
+[dependencies.platform_types]
+path = "../../../platform_types"
+
 [dependencies.macros]
 path = "../../../macros"
 
