--- a/libs/editor/libs/editor_types/Cargo.toml
+++ b/libs/editor/libs/editor_types/Cargo.toml
@@ -13,5 +13,8 @@ vec1 = "1.4.0"
 [dependencies.macros]
 path = "../../../macros"
 
+[dependencies.perf_viz]
+path = "../../../perf_viz"
+
 [dependencies.platform_types]
 path = "../../../platform_types"
