--- a/libs/platform_layer/libs/opengl/Cargo.toml
+++ b/libs/platform_layer/libs/opengl/Cargo.toml
@@ -20,6 +20,7 @@ gl_layer = { path = "gl_layer" }
 glyph_brush = { path = "glyph-brush" }
 glyph_brush_layout = { path = "glyph-brush-layout" }
 full_rusttype = { version = "0.7.5", features = ["gpu_cache"], package = "rusttype" }
+shared = { path = "shared" }
 glutin = "0.22.0-alpha1"
 spin_sleep = "0.3"
 clipboard = "0.5.0"
