Put in the API I want for arbitary rectangles, leaving some hackiness in the gl_layer crate
the opengl crate could also use a rename at this point

--- a/libs/platform_layer/libs/opengl/gl_layer/Cargo.toml
+++ b/libs/platform_layer/libs/opengl/gl_layer/Cargo.toml
@@ -11,6 +11,7 @@ path = "./src/gl_layer.rs"
 glyph_brush = { path = "../glyph-brush" }
 gl = "0.11"
 perf_viz = { path = "../../../../perf_viz" }
+platform_types = { path = "../../../../platform_types" }
 macros = { path = "../../../../macros" }
 shared = { path = "../shared" }
 
