--- a/libs/platform_layer/libs/opengl/shared/Cargo.toml
+++ b/libs/platform_layer/libs/opengl/shared/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 authors = ["Ryan1729 <Ryan1729@gmail.com>"]
 edition = "2018"
 
+[lib]
+path = "./src/shared.rs"
+
 [dependencies]
+platform_types = { path = "../../../../platform_types" }
