--- a/libs/platform_layer/Cargo.toml
+++ b/libs/platform_layer/Cargo.toml
@@ -7,11 +7,11 @@ description = "platform layer(s) for rote"
 license = "Apache-2.0"
 
 [dependencies]
-opengl = { path = "./libs/opengl" }
+wimp = { path = "./libs/wimp" }
 platform_types = { path = "../platform_types" }
 macros = { path = "../macros" }
 
 [features]
 default = []
 invariant-checking = []
-time-render = ["opengl/time-render"]
+time-render = ["wimp/time-render"]
