find out the bug was pointers changing due to string copies and decide to take the easy way out of not using them for ids.
Also pull out a separate wimp_render module and identify another bug that seems worth using testing to figure out.

--- a/libs/platform_layer/libs/wimp/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/Cargo.toml
@@ -22,6 +22,7 @@ shared = { path = "shared" }
 glutin = "0.22.0-alpha1"
 spin_sleep = "0.3"
 clipboard = "0.5.0"
+wimp_render = { path = "wimp_render" }
 
 [features]
 default = []
