get `make_nth_tab_visible_if_present` working and simplified

--- a/libs/platform_layer/libs/wimp/wimp_render/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/wimp_render/Cargo.toml
@@ -13,3 +13,6 @@ perf_viz = { path = "../../../../perf_viz" }
 if_changed = { path = "../../../../if_changed" }
 platform_types = { path = "../../../../platform_types" }
 macros = { path = "../../../../macros" }
+
+[dev-dependencies]
+proptest = "0.9.3"
