--- a/libs/platform_layer/libs/wimp/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/Cargo.toml
@@ -22,6 +22,7 @@ shared = { path = "shared" }
 glutin = "0.22.0-alpha3"
 spin_sleep = "0.3"
 clipboard = "0.5.0"
+directories = "2.0"
 wimp_render = { path = "wimp_render" }
 
 [features]
