stub out multi-thread access to `BufferStatuses`

--- a/libs/platform_layer/libs/wimp/shared/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/shared/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2018"
 path = "./src/shared.rs"
 
 [dependencies]
-platform_types = { path = "../../../../platform_types" }
+macros = { path = "../../../../macros" }
