--- a/libs/platform_layer/libs/wimp/edited_storage/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/edited_storage/Cargo.toml
@@ -9,6 +9,7 @@ path = "./src/edited_storage.rs"
 
 [dependencies]
 platform_types = { path = "../../../../platform_types" }
+shared = { path = "../shared" }
 rand = "0.7"
 
 [dev-dependencies]
