--- a/libs/platform_layer/libs/wimp/wimp_render/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/wimp_render/Cargo.toml
@@ -9,6 +9,7 @@ path = "./src/wimp_render.rs"
 
 [dependencies]
 gl_layer = { path = "../gl_layer" }
+shared = { path = "../shared" }
 perf_viz = { path = "../../../../perf_viz" }
 if_changed = { path = "../../../../if_changed" }
 platform_types = { path = "../../../../platform_types" }
