finish stubbing out and start using generational indexes for the maps instead

--- a/libs/platform_layer/libs/wimp/shared/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/shared/Cargo.toml
@@ -9,3 +9,4 @@ path = "./src/shared.rs"
 
 [dependencies]
 macros = { path = "../../../../macros" }
+platform_types = { path = "../../../../platform_types" }
