write custom multithreaded data structure and some more failing tests

--- a/libs/platform_layer/libs/wimp/shared/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/shared/Cargo.toml
@@ -10,3 +10,6 @@ path = "./src/shared.rs"
 [dependencies]
 macros = { path = "../../../../macros" }
 platform_types = { path = "../../../../platform_types" }
+
+[dev-dependencies]
+proptest = "0.9.3"
