--- a/libs/platform_layer/Cargo.toml
+++ b/libs/platform_layer/Cargo.toml
@@ -15,3 +15,4 @@ macros = { path = "../macros" }
 default = []
 invariant-checking = []
 time-render = ["wimp/time-render"]
+extra-prints = ["wimp/extra-prints"]
