--- a/libs/platform_layer/libs/wimp/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/Cargo.toml
@@ -31,6 +31,7 @@ directories = "2.0"
 default = []
 invariant-checking = []
 time-render = ["gl_layer/time-render"]
+extra-prints = ["shared/extra-prints"]
 
 [dev-dependencies]
 criterion = "0.2"
