update to glutin 0.22 which has windows titlebars that respect themes

--- a/libs/platform_layer/libs/wimp/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/Cargo.toml
@@ -21,7 +21,7 @@ full_rusttype = { version = "0.7.5", features = ["gpu_cache"], package = "rustty
 edited_storage = { path = "edited_storage" }
 shared = { path = "shared" }
 wimp_render = { path = "wimp_render" }
-glutin = "0.22.0-alpha3"
+glutin = "0.22.0"
 spin_sleep = "0.3"
 clipboard = "0.5.0"
 directories = "2.0"
