--- a/libs/editor/libs/parsers/Cargo.toml
+++ b/libs/editor/libs/parsers/Cargo.toml
@@ -7,10 +7,15 @@ edition = "2018"
 [lib]
 path = "./src/parsers.rs"
 
+[build-dependencies]
+cc = "1.0"
+
 [dependencies]
+tree-sitter = "0.6.0"
 
 [dependencies.macros]
 path = "../../../macros"
 
 [dependencies.platform_types]
 path = "../../../platform_types"
+
