--- a/libs/editor/libs/parsers/Cargo.toml
+++ b/libs/editor/libs/parsers/Cargo.toml
@@ -19,3 +19,8 @@ path = "../../../macros"
 [dependencies.platform_types]
 path = "../../../platform_types"
 
+[dev-dependencies]
+proptest = "0.9.5"
+
+[dev-dependencies.pub_arb]
+path = "../../../pub_arb"
