move glyph_brush and related libs into a nested foler that makes import relationships more clear, to prepare to update to a new version of glyph_brush, with my extra feature hacks applied to the new version

--- a/libs/platform_layer/libs/wimp/gl_layer/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 path = "./src/gl_layer.rs"
 
 [dependencies]
-glyph_brush = { path = "../glyph-brush" }
+glyph_brush = { path = "./libs/glyph-brush" }
 gl = "0.14"
 perf_viz = { path = "../../../../perf_viz" }
 platform_types = { path = "../../../../platform_types" }
