separate things into separate crates, to prepare to update to a new version of glyph_brush, with my extra feature hacks applied to the new version

--- a/libs/platform_layer/libs/wimp/gl_layer/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/Cargo.toml
@@ -8,8 +8,9 @@ edition = "2018"
 path = "./src/gl_layer.rs"
 
 [dependencies]
-glyph_brush = { path = "./libs/glyph-brush" }
-gl = "0.14"
+gl_layer_types = { path = "./libs/gl_layer_types" }
+open_gl = { path = "./libs/open_gl" }
+text_rendering = { path = "./libs/text_rendering" }
 perf_viz = { path = "../../../../perf_viz" }
 platform_types = { path = "../../../../platform_types" }
 macros = { path = "../../../../macros" }
