--- a/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/libs/rusttype/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/libs/rusttype/Cargo.toml
@@ -37,9 +37,9 @@ crossbeam-deque = { version = "0.7", optional = true }
 crossbeam-utils = { version = "0.6", optional = true }
 num_cpus = { version = "1.0", optional = true }
 
-perf_viz = { path = "../../../../../../perf_viz" }
-macros = { path = "../../../../../../macros" }
-if_changed = { path = "../../../../../../if_changed" }
+perf_viz = { path = "../../../../../../../../perf_viz" }
+macros = { path = "../../../../../../../../macros" }
+if_changed = { path = "../../../../../../../../if_changed" }
 
 [dev-dependencies]
 glium = "0.23"
