get the tests closer to compiling and realize that it might make sense to pull the aspects we want to test into the g_i module itself
That is, we would make a `SelectableVec1<A>` in g_i, test/fix that a whole bunch, and have `EditorBuffers` use that.

--- a/libs/editor/libs/parsers/Cargo.toml
+++ b/libs/editor/libs/parsers/Cargo.toml
@@ -22,5 +22,5 @@ path = "../../../platform_types"
 [dev-dependencies]
 proptest = "0.9.5"
 
-[dev-dependencies.pub_arb]
-path = "../../../pub_arb"
+[dev-dependencies.pub_arb_rust_code]
+path = "../../../pub_arb/rust_code"
