--- a/libs/pub_arb/platform_types/Cargo.toml
+++ b/libs/pub_arb/platform_types/Cargo.toml
@@ -4,6 +4,14 @@ version = "0.1.0"
 authors = ["Ryan1729 <ryan1729@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+path = "./src/pub_arb_platform_types.rs"
 
 [dependencies]
+proptest = "0.9"
+
+[dependencies.arb_macros]
+path = "../../arb_macros"
+
+[dependencies.platform_types]
+path = "../../platform_types"
