--- a/libs/editor/Cargo.toml
+++ b/libs/editor/Cargo.toml
@@ -43,6 +43,12 @@ path = "libs/text_buffer"
 criterion = "0.2"
 proptest = "0.9"
 
+[dev-dependencies.arb_macros]
+path = "../arb_macros"
+
+[dev-dependencies.pub_arb_platform_types]
+path = "../pub_arb/platform_types"
+
 [features]
 default = []
 invariant-checking = ["check_or_no_panic/invariant-checking"]
