pull all known command relevant vars into a struct called `RunState`, which required lots of restructuring

--- a/libs/platform_layer/libs/wimp/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/Cargo.toml
@@ -21,6 +21,7 @@ full_rusttype = { version = "0.7.5", features = ["gpu_cache"], package = "rustty
 edited_storage = { path = "edited_storage" }
 shared = { path = "shared" }
 wimp_render = { path = "wimp_render" }
+wimp_types = { path = "wimp_types" }
 glutin = "0.23.0"
 spin_sleep = "0.3"
 clipboard = "0.5.0"
