--- a/libs/platform_layer/libs/wimp/wimp_types/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/wimp_types/Cargo.toml
@@ -10,6 +10,7 @@ path = "./src/wimp_types.rs"
 [dependencies]
 macros = { path = "../../../../macros" }
 platform_types = { path = "../../../../platform_types" }
+shared = { path = "../shared" }
 clipboard = "0.5.0"
 glutin = "0.23.0"
 
