--- a/libs/platform_layer/Cargo.toml
+++ b/libs/platform_layer/Cargo.toml
@@ -16,3 +16,4 @@ default = []
 invariant-checking = []
 time-render = ["wimp/time-render"]
 extra-prints = ["wimp/extra-prints"]
+print-raw-input = ["wimp/print-raw-input"]
