--- a/libs/platform_types/Cargo.toml
+++ b/libs/platform_types/Cargo.toml
@@ -15,4 +15,5 @@ mut_methods = { path = "./libs/mut_methods" }
 [dev-dependencies]
 proptest = "0.9.5"
 arb_macros = { path = "../arb_macros" }
+pub_arb_platform_types = { path = "../pub_arb/platform_types" }
 
