--- a/libs/pub_arb/platform_types/Cargo.toml
+++ b/libs/pub_arb/platform_types/Cargo.toml
@@ -9,6 +9,7 @@ path = "./src/pub_arb_platform_types.rs"
 
 [dependencies]
 proptest = "0.9"
+pub_arb_g_i = { path = "../g_i" }
 
 [dependencies.arb_macros]
 path = "../../arb_macros"
