--- a/libs/editor/Cargo.toml
+++ b/libs/editor/Cargo.toml
@@ -49,6 +49,9 @@ path = "../arb_macros"
 [dev-dependencies.pub_arb_platform_types]
 path = "../pub_arb/platform_types"
 
+[dev-dependencies.pub_arb_text_buffer]
+path = "../pub_arb/text_buffer"
+
 [features]
 default = []
 invariant-checking = ["check_or_no_panic/invariant-checking"]
