--- a/libs/editor/libs/text_buffer/Cargo.toml
+++ b/libs/editor/libs/text_buffer/Cargo.toml
@@ -7,10 +7,6 @@ edition = "2018"
 [lib]
 path = "./src/text_buffer.rs"
 
-[dependencies]
-regex = "1.1.9"
-lazy_static = "1.3.0"
-
 [dependencies.editor_types]
 path = "../editor_types"
 
@@ -29,6 +25,16 @@ path = "../../../perf_viz"
 [dependencies.platform_types]
 path = "../../../platform_types"
 
+[dependencies]
+regex = "1.1.9"
+lazy_static = "1.3.0"
+proptest = { version = "0.9.3", optional = true }
+pretty_assertions = { version = "0.6.1", optional = true }
+
 [dev-dependencies]
 proptest = "0.9.3"
 pretty_assertions = "0.6.1"
+
+[features]
+default = []
+pub_arb = ["proptest", "pretty_assertions"]
