add "?" button, and add `invariant_assert` to indicate what comes next

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ rand = "0.3"
 
 [features]
 default = []
-invariant-checking = ["editor/invariant-checking"]
+invariant-checking = ["platform_layer/invariant-checking", "editor/invariant-checking"]
 time-render = ["platform_layer/time-render"]
 flame-chart = ["perf_viz/flame-chart"]
 flame-graph = ["perf_viz/flame-graph"]
