--- a/libs/platform_layer/Cargo.toml
+++ b/libs/platform_layer/Cargo.toml
@@ -13,7 +13,7 @@ macros = { path = "../macros" }
 
 [features]
 default = []
-invariant-checking = []
+invariant-checking = ["wimp/invariant-checking"]
 time-render = ["wimp/time-render"]
 extra-prints = ["wimp/extra-prints"]
 print-raw-input = ["wimp/print-raw-input"]
