--- a/libs/platform_layer/libs/wimp/wimp_render/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/wimp_render/Cargo.toml
@@ -18,3 +18,7 @@ macros = { path = "../../../../macros" }
 
 [dev-dependencies]
 proptest = "0.9.3"
+
+[features]
+default = []
+invariant-checking = ["macros/invariant-checking"]
