get `edited_indicies` test running and failing

--- a/libs/platform_types/Cargo.toml
+++ b/libs/platform_types/Cargo.toml
@@ -15,12 +15,14 @@ move_mod = { path = "./libs/move_mod" }
 proptest = { version = "0.9.5", optional = true }
 arb_macros = { path = "../arb_macros", optional = true }
 pub_arb_g_i = { path = "../pub_arb/g_i", optional = true }
+pub_arb_std = { path = "../pub_arb/std", optional = true }
 
 [dev-dependencies]
 proptest = { version = "0.9.5"}
 arb_macros = { path = "../arb_macros"}
 pub_arb_g_i = { path = "../pub_arb/g_i"}
+pub_arb_std = { path = "../pub_arb/std"}
 
 [features]
 default = []
-pub_arb = ["pub_arb_g_i", "arb_macros", "proptest"]
+pub_arb = ["pub_arb_g_i", "pub_arb_std", "arb_macros", "proptest"]
