--- a/libs/editor/libs/panic_safe_rope/Cargo.toml
+++ b/libs/editor/libs/panic_safe_rope/Cargo.toml
@@ -13,8 +13,8 @@ ropey = "1.1.0"
 [dependencies.check_or_no_panic]
 path = "../../../check_or_no_panic"
 
-[dependencies.platform_types]
-path = "../../../platform_types"
+[dependencies.editor_types]
+path = "../editor_types"
 
 [dependencies.macros]
 path = "../../../macros"
