--- a/libs/editor/libs/text_buffer/Cargo.toml
+++ b/libs/editor/libs/text_buffer/Cargo.toml
@@ -25,6 +25,12 @@ path = "../../../perf_viz"
 [dependencies.platform_types]
 path = "../../../platform_types"
 
+[dependencies.rope_pos]
+path = "../rope_pos"
+
+[dependencies.search]
+path = "../search"
+
 [dependencies]
 regex = "1.1.9"
 lazy_static = "1.3.0"
