--- a/libs/pub_arb/std/Cargo.toml
+++ b/libs/pub_arb/std/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Ryan1729 <ryan1729@gmail.com>"]
 edition = "2018"
 
 [lib]
-path = "./src/std.rs"
+path = "./src/pub_arb_std.rs"
 
 [dependencies]
 proptest = "0.9"
