--- a/libs/editor/libs/text_buffer/Cargo.toml
+++ b/libs/editor/libs/text_buffer/Cargo.toml
@@ -36,11 +36,13 @@ regex = "1.1.9"
 lazy_static = "1.3.0"
 proptest = { version = "0.9.3", optional = true }
 pretty_assertions = { version = "0.6.1", optional = true }
+pub_arb_std = { path = "../../../pub_arb/std", optional = true }
 
 [dev-dependencies]
 proptest = "0.9.3"
 pretty_assertions = "0.6.1"
+pub_arb_std = { path = "../../../pub_arb/std" }
 
 [features]
 default = []
-pub_arb = ["proptest", "pretty_assertions"]
+pub_arb = ["proptest", "pretty_assertions", "pub_arb_std"]
