update vendored deps and stop vendoring rusttype

--- a/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/Cargo.toml
@@ -12,8 +12,8 @@ path = "./src/text_rendering.rs"
 [dependencies]
 gl_layer_types = {path = "../gl_layer_types"}
 glyph_brush = {path = "./libs/glyph-brush"}
-glyph_brush_layout = {path = "./libs/glyph-brush-layout"}
-rusttype = {path = "./libs/rusttype"}
+glyph_brush_layout = "0.1.9"
+rusttype = "0.8"
 macros = { path = "../../../../../../macros" }
 perf_viz = { path = "../../../../../../perf_viz" }
 platform_types = { path = "../../../../../../platform_types" }
