--- a/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/libs/glyph-brush/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/libs/glyph-brush/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "glyph_brush"
-version = "0.4.1"
+version = "0.6.3"
 authors = ["Alex Butler <alexheretic@gmail.com>"]
 edition = "2018"
 description = "Fast cached text render library using rusttype"
@@ -10,19 +10,23 @@ license = "Apache-2.0"
 readme="README.md"
 
 [dependencies]
-glyph_brush_layout = { path = "../glyph-brush-layout" }
+glyph_brush_layout = { version = "0.1.9", path = "../glyph-brush-layout" }
 log = "0.4.4"
 ordered-float = "1"
-full_rusttype = { features = ["gpu_cache"], package = "rusttype", path = "../rusttype" }
-hashbrown = "0.2"
+full_rusttype = { version = "0.8.3", features = ["gpu_cache"], package = "rusttype" }
+rustc-hash = "1"
 twox-hash = "1"
-perf_viz = { path = "../../../../../../../../perf_viz" }
-macros = { path = "../../../../../../../../macros" }
-if_changed = { path = "../../../../../../../../if_changed" }
 
 [dev-dependencies]
-env_logger = { version = "0.6", default-features = false }
-lazy_static = "1"
-gl = "0.11"
-glutin = "0.20"
+env_logger = { version = "0.7", default-features = false }
+once_cell = "1"
+gl = "0.14"
+glutin = "0.24"
 spin_sleep = "0.3"
+approx = "0.3.1"
+matches = "0.1"
+criterion = "0.3"
+
+[[bench]]
+name = "bench"
+harness = false
