add a bunch of perf_viz annotations and narrow down the large file perf problem to the bounds clipping in the ensure_vertices method in glyph_brush
So we should probably either clip the glyphs earlier, when more is known about them, or do a spatial partition of the `GlyphVertex`es inside glyph_brush

--- a/libs/platform_layer/Cargo.toml
+++ b/libs/platform_layer/Cargo.toml
@@ -13,6 +13,7 @@ macros = { path = "../macros" }
 
 [features]
 default = []
+disable-fade-alpha = ["wimp/disable-fade-alpha"]
 invariant-checking = ["wimp/invariant-checking"]
 time-render = ["wimp/time-render"]
 extra-prints = ["wimp/extra-prints"]
