--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ rand = "0.3"
 
 [features]
 default = []
+disable-fade-alpha = ["platform_layer/disable-fade-alpha"]
 invariant-checking = ["platform_layer/invariant-checking", "editor/invariant-checking"]
 time-render = ["platform_layer/time-render"]
 flame-chart = ["perf_viz/flame-chart"]
