--- a/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/libs/glyph-brush/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/libs/glyph-brush/Cargo.toml
@@ -16,6 +16,8 @@ ordered-float = "1"
 full_rusttype = { version = "0.8.3", features = ["gpu_cache"], package = "rusttype" }
 rustc-hash = "1"
 twox-hash = "1"
+perf_viz = { path = "../../../../../../../../perf_viz" }
+if_changed = { path = "../../../../../../../../if_changed" }
 
 [dev-dependencies]
 env_logger = { version = "0.7", default-features = false }
