try clipping things and realiaze that if we want to clip we need to change the caching behviour

--- a/libs/platform_layer/libs/wimp/wimp_render/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/wimp_render/Cargo.toml
@@ -20,5 +20,6 @@ macros = { path = "../../../../macros" }
 proptest = "0.9.3"
 
 [features]
+clip-debugging = []
 default = []
 invariant-checking = ["macros/invariant-checking"]
