--- a/libs/platform_layer/libs/wimp/gl_layer/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/Cargo.toml
@@ -22,8 +22,6 @@ glutin = "0.22.0-alpha1"
 spin_sleep = "0.3"
 
 [features]
-# See comment in "time-render" check in gl_layer.rs for the reason why
-# "time-render" is on by default.
-default = ["time-render"]
+default = []
 invariant-checking = []
-time-render = []
+time-render = ["open_gl/time-render"]
