add proptest to make sure apptemted optimizations don't change behaviour, and discover a failure

--- a/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/Cargo.toml
+++ b/libs/platform_layer/libs/wimp/gl_layer/libs/text_rendering/Cargo.toml
@@ -17,3 +17,7 @@ rusttype = "0.8"
 macros = { path = "../../../../../../macros" }
 perf_viz = { path = "../../../../../../perf_viz" }
 platform_types = { path = "../../../../../../platform_types" }
+
+[dev-dependencies]
+proptest = "0.9"
+pub_arb_std = { path = "../../../../../../pub_arb/std"}
