optimize zero-change frames by caching the rendered `BufferView`s, assuming that rendering `BufferView`s always stays more expensive than hashing `EditorBuffer`s

--- a/libs/platform_types/libs/g_i/Cargo.toml
+++ b/libs/platform_types/libs/g_i/Cargo.toml
@@ -9,6 +9,7 @@ path = "./src/g_i.rs"
 
 [dependencies]
 vec1 = "1.4"
+perf_viz = { path = "../../../perf_viz" }
 macros = { path = "../../../macros" }
 move_mod = { path = "../move_mod" }
 mut_methods = { path = "./libs/mut_methods" }
