--- a/libs/editor/Cargo.toml
+++ b/libs/editor/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 path = "./src/editor.rs"
 
 [dependencies]
+# we want a fast hash, and the first platform layer used this already so, sure why not.
+rustc-hash = "1"
 
 [dependencies.check_or_no_panic]
 path = "../check_or_no_panic"
